reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_adjacently_tagged_enum_field.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Message"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Message"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Message",
        "fields": {
          "named": [
            {
              "name": "id",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "payload",
              "type": {
                "name": "reflectapi_demo::tests::serde::Payload"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Payload",
        "representation": {
          "adjacent": {
            "tag": "kind",
            "content": "data"
          }
        },
        "variants": [
          {
            "name": "Text",
            "fields": {
              "named": [
                {
                  "name": "body",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Binary",
            "fields": {
              "named": [
                {
                  "name": "size",
                  "type": {
                    "name": "u32"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Message",
        "fields": {
          "named": [
            {
              "name": "id",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "payload",
              "type": {
                "name": "reflectapi_demo::tests::serde::Payload"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Payload",
        "representation": {
          "adjacent": {
            "tag": "kind",
            "content": "data"
          }
        },
        "variants": [
          {
            "name": "Text",
            "fields": {
              "named": [
                {
                  "name": "body",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Binary",
            "fields": {
              "named": [
                {
                  "name": "size",
                  "type": {
                    "name": "u32"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
