reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_enum_with_unit_variants_only-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Item"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Item"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Item": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Status"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Item",
            "required": [
              "name"
            ],
            "properties": {
              "name": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.Status": {
        "oneOf": [
          {
            "type": "object",
            "title": "Active",
            "required": [
              "status"
            ],
            "properties": {
              "status": {
                "const": "Active"
              }
            }
          },
          {
            "type": "object",
            "title": "Inactive",
            "required": [
              "status"
            ],
            "properties": {
              "status": {
                "const": "Inactive"
              }
            }
          },
          {
            "type": "object",
            "title": "Pending",
            "required": [
              "status"
            ],
            "properties": {
              "status": {
                "const": "Pending"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
